Fix file grid overflow

--- a/src/components/courseSection/styles.scss
+++ b/src/components/courseSection/styles.scss
@@ -48,6 +48,7 @@
     &--file-grid {
         @extend .course-section__card;
         grid-area: file-grid;
+        overflow-y: auto;
     }
 
     &--links {
